2010-08-30  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Do not die if the C helper programs
	  foomatic-combo-xml and foomatic-perl-data fail. Simply return
	  undef so that the caller can handle the error.

2010-08-26  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.in: Fixed bug that made the PPD URI
	  foomatic:Apollo-P-2100-hpijs-pcl3.ppd interpreted as printer
	  Apollo-P-2100-hpijs and driver pcl3.

2010-07-10  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm, foomatic-perl-data.c: Added support for the new
	  "fingerprint" parameter of the <package> tag.

2010-07-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Documented new "fingerprint" parameter for the <package>
	  tag. It provides a link to key fingerprint on the web site of the
	  issuer of the driver.

2010-06-23  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-compiledb.1.in, foomatic-kitload.8.in: Fixed some
	  hyphen-used-as-minus lintian warnings. Thanks to Didier Raboud
	  (didier at raboud dot com) for the patch.

2010-06-11  Till Kamppeter <till.kamppeter@gmail.com>

	* Makefile.in: Do "make install" in lib/ directory with explicit
	  use of DESTDIR. Otherwise it can come to a duplicate insertion
	  of DESTDIR. Thanks to Tim Mooney for the patch (Bug #445).

	* configure.ac: Simplified and generalized the check for the Perl
	  library directory prefix in the configure script. Thanks to Tim
	  Mooney (Bug #418).

	* configure.ac: Check for functions of libxml with CFLAGS and LIBS
	  containing the detected references to libxml. Thanks to Tim Mooney
	  for the patch (Bug #444).

2010-04-27  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: "*FoomaticRIPNoPageAccounting" was not inserted
	  into the generated Foomatic PPDs when the printer/driver data was
	  read from a MySQL database. Fixed.

2010-04-06  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Implemented two acceleration modes to the